--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+body{
+    color: white;
+    background-color: #444;
+    font-family: sans-serif;
+    font-size: 62.5%;
+
+}
+a{
+    text-decoration: none;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    margin:auto;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #cccc;
+    font-size: 1.5rem;
+}
